# orderbook_aggregator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
binance_api/: Cargo.toml
binance_api/src/: lib.rs  types.rs
bitstamp_api/: Cargo.toml
bitstamp_api/src/: lib.rs  types.rs
orderbook_aggregator_client/: Cargo.toml  build.rs
orderbook_aggregator_client/src/: main.rs  types.rs
orderbook_aggregator_common/: Cargo.toml
orderbook_aggregator_common/src/: errors.rs  lib.rs  types.rs  ws.rs
orderbook_aggregator_service/: Cargo.toml  build.rs
orderbook_aggregator_service/src/: main.rs  service.rs  types.rs  utils.rs
