[workspace]
members = [
    "binance_api",
    "bitstamp_api",
    "orderbook_aggregator_common",
    "orderbook_aggregator_service",
    "orderbook_aggregator_client"
]

[workspace.dependencies]
log = { version = "0.4.17", features = ["release_max_level_warn"] }
env_logger = "0.10.0"
clap = {version = "4.3.1", features = ["derive"]}
url = "2.3.1"
tokio = { version = "1.28.2", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
rust_decimal = { version = "1.29.1", features = ["serde-with-str"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
async-trait = "0.1.68"
futures-util = "0.3.28"
futures-channel = "0.3.28"
