[workspace]
members = [
    "binance_api",
    "bitstamp_api",
    "orderbook_aggregator_common",
    "orderbook_aggregator_service",
    "orderbook_aggregator_client"
]
resolver = "2"

[workspace.dependencies]
log = { version = "0.4", features = ["release_max_level_warn"] }
env_logger = "0.11"
clap = {version = "4.5", features = ["derive"]}
url = "2.5"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
rust_decimal = { version = "1.34", features = ["serde-with-str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures-util = "0.3"
futures-channel = "0.3"
