[package]
name = "binance_api"
version = "0.1.0"
edition = "2021"
description = "Library for using Binance websocket API"

[dependencies]
log.workspace = true
url.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
async-trait.workspace = true

orderbook_aggregator_common = { path = "../orderbook_aggregator_common" }

[dev-dependencies]
env_logger.workspace = true