[package]
name = "bitstamp_api"
version = "0.1.0"
edition = "2021"

[dependencies]
log.workspace = true
url.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures-util.workspace = true
futures-channel.workspace = true

orderbook_aggregator_common = { path = "../orderbook_aggregator_common" }


[dev-dependencies]
env_logger.workspace = true