[package]
name = "orderbook_aggregator_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
clap.workspace = true
rust_decimal.workspace = true
orderbook_aggregator_common = { path = "../orderbook_aggregator_common" }
bitstamp_api = { path = "../bitstamp_api" }
binance_api = { path = "../binance_api" }
prost = "0.11.9"
tonic = "0.9.2"
tokio-stream = { version = "0.1.14", features = ["sync"] }

[build-dependencies]
tonic-build = "0.9.2"